updating python notebooks for use with client server code

--- a/CCDimage-capture with qfunc and consolidated cells.ipynb
+++ b/CCDimage-capture with qfunc and consolidated cells.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "CCDimage-capture with qfunc and consolidated cells"
+  "name": ""
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,55 +18,43 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Must be run from the MM directory in order to find relevant libraries and config files."
+      "First start the image server by running \"sudo python Server.py\" in the /home/photon/code/Camserver folder"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "cd \"c:\\\\Program Files\\Micro-Manager-1.4\\\""
+      "import matplotlib.pyplot as plt\n",
+      "import numpy as np\n",
+      "import os\n",
+      "import zmq\n",
+      "from scipy import stats\n",
+      "from collections import Counter \n",
+      "from numpy.fft import fft,fftshift\n",
+      "from numpy import real, imag, abs\n",
+      "import sys\n",
+      "sys.path.append('/home/photon/code/PylonCCD')\n",
+      "import Qfunction\n",
+      "\n",
+      "Qfunc = Qfunction"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "c:\\Program Files\\Micro-Manager-1.4\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Load necessary libraries\n",
-      "import MMCorePy\n",
-      "import matplotlib.pyplot as plt\n",
-      "import numpy as np\n",
-      "import os\n",
-      "from scipy import stats\n",
-      "from collections import Counter \n",
-      "from numpy.fft import fft,fftshift\n",
-      "from numpy import real, imag, abs\n",
-      "import sys\n",
-      "sys.path.append('C:\\Documents and Settings\\All Users\\Documents\\PylonCCD')\n",
-      "import Qfunction\n",
-      "\n",
-      "Qfunc = Qfunction\n",
-      "\n",
-      "\n",
-      "#Initialize camera connection\n",
-      "mmc = MMCorePy.CMMCore()\n",
-      "mmc.loadDevice(\"ccd\",\"PrincetonInstruments\",\"Camera-1\")\n",
-      "mmc.initializeDevice(\"ccd\")\n",
-      "mmc.setProperty(\"ccd\",\"ShutterMode\",\"Open Shutter Pre-Exposure\")\n",
-      "xdim = 1340 #x-dimension of ccd\n",
-      "ydim = 400 #y-dimension of ccd"
+      "def recv_array(socket, flags=0, copy=False, track=False):\n",
+      "    \"\"\"recv a numpy array\"\"\"\n",
+      "    md = socket.recv_json(flags=flags)\n",
+      "    msg = socket.recv(flags=flags, copy=copy, track=track)\n",
+      "    buf = buffer(msg)\n",
+      "    A = numpy.frombuffer(buf, dtype=md['dtype'])\n",
+      "    return A.reshape(md['shape'])"
      ],
      "language": "python",
      "metadata": {},
@@ -77,22 +65,66 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print mmc.getProperty(\"ccd\", \"CCDTemperature\")\n",
-      "print mmc.getProperty(\"ccd\", \"CCDTemperatureSetPoint\")"
+      "REQUEST_TIMEOUT = 2500\n",
+      "SERVER_ENDPOINT = \"tcp://localhost:5555\"\n",
+      "\n",
+      "context = zmq.Context()\n",
+      "\n",
+      "#  Socket to talk to server\n",
+      "print \"Connecting to array server...\"\n",
+      "client = context.socket(zmq.REQ)\n",
+      "client.connect(SERVER_ENDPOINT)\n",
+      "\n",
+      "poll = zmq.Poller()\n",
+      "poll.register(client, zmq.POLLIN)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "-119\n",
-        "-120\n"
-       ]
-      }
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "shots_requested = 1\n",
+      "request = str(shots_requested)  # ask for one shot of data\n",
+      "print \"I: Sending (%s)\" % request\n",
+      "\n",
+      "client.send(request)"
      ],
-     "prompt_number": 3
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "socks = dict(poll.poll(REQUEST_TIMEOUT))\n",
+      "if socks.get(client) == zmq.POLLIN:\n",
+      "    data_array = recv_array(client)\n",
+      "    #reply = client.recv()\n",
+      "\n",
+      "    if len(data_array) > 1:  # TODO test for the right size array\n",
+      "        print \"I: Server replied OK (%s,%s)\" % data_array.shape\n",
+      "\n",
+      "    else:\n",
+      "        # print \"E: Malformed reply from server: %s\" % reply\n",
+      "        print \"E: no reply from server\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "imshow(data_array)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
