CCDimage ready to do multi-shot analysis

--- a/CCDimage-capture with qfunc and consolidated cells.ipynb
+++ b/CCDimage-capture with qfunc and consolidated cells.ipynb
@@ -248,13 +248,6 @@
      "prompt_number": 11
     },
     {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "TODO: Add frames array to stack several shots. Testing the following:"
-     ]
-    },
-    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -322,12 +315,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Data analysis and index plots\n",
-      "maxIndex = np.zeros(frames)\n",
-      "\n",
-      "#Create list of indices of maximum magnitude\n",
-      "fftComplex = []\n",
-      "\n",
+      "# Create list of the FFT outputs, then we can append to this indefinitely\n",
+      "# if this gets big we can crop to the relevant reason\n",
+      "fftComplex = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "for f in range (0, frames):\n",
       "    fftComplex.append(fftshift(fft(im[ydim/2,:,f])))"
      ],
@@ -340,7 +339,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Manual index override\n",
+      "# Manual index override, pick point 226\n",
       "\n",
       "output = []\n",
       "qbin = 15\n",
