cleaning histogram fix example, added comments

--- a/Histogram fix.ipynb
+++ b/Histogram fix.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bdaa9546360c4b98943047ec658bc4e0f6fd140415f81234fe6d92c4a184a9cb"
+  "signature": "sha256:3e1adcf1fb7cd087ee94ec7aa3d2ac180c0e5b435244a7cb4e534b61a909315a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -40,27 +40,38 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# a circular data set like our random phase:\n",
-      "x = np.random.normal(size=2000) + 4*np.sin(np.linspace(0,2*np.pi,2000))*np.sin(np.linspace(0,np.pi,2000))\n",
-      "y = np.random.normal(size=2000) + 4*np.cos(np.linspace(0,2*np.pi,2000))"
+      "N = 20000"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# a circular data set like our random phase:\n",
+      "x = np.random.normal(size=N) + 4*np.sin(np.linspace(0,2*np.pi,N))*np.sin(np.linspace(0,np.pi,N))\n",
+      "y = np.random.normal(size=N) + 4*np.cos(np.linspace(0,2*np.pi,N))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "# a gaussian data set like our regular Q-function:\n",
-      "x = np.random.normal(size=2000) + 4\n",
-      "y = np.random.normal(size=2000) - 3"
+      "x = np.random.normal(size=N) + 4\n",
+      "y = np.random.normal(size=N) - 3"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -180,11 +191,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "KDE kernel factor:  0.281726911385\n"
+        "KDE kernel factor:  0.191938310367\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -195,7 +206,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
