--- a/Q function graphs for paper.ipynb
+++ b/Q function graphs for paper.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5d935ad2765dabf420db95fd52a259fa6350f9b431d9f61ebdff28ba2fb99b79"
+  "signature": "sha256:a12217ae2394d1ec1acd01dde21cc32a8ad739664057ac2d95c9f5fd63c37fcb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -27,7 +27,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -46,7 +46,7 @@
        ]
       }
      ],
-     "prompt_number": 47
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -70,7 +70,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 55
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -82,7 +82,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 56
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -94,7 +94,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 57
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -111,9 +111,19 @@
       "plt.subplots_adjust(left=0, right=0.90, top=1, bottom=0, wspace=0.22)\n",
       "\n",
       "hist, xedges, yedges = np.histogram2d(x, y, bins)\n",
-      "X, Y = np.meshgrid(xedges[:-1], yedges[:-1])\n",
+      "\n",
+      "#X, Y = np.meshgrid(xedges[:-1], yedges[:-1]) \n",
+      "# fixing histogram:\n",
+      "xcenters = (xedges[:-1] + xedges[1:]) / 2\n",
+      "ycenters = (yedges[:-1] + yedges[1:]) / 2\n",
+      "X, Y = np.mgrid[xcenters[0]:xcenters[-1]:len(xcenters)*1j,ycenters[0]:ycenters[-1]:len(ycenters)*1j]\n",
+      "\n",
       "Z = hist\n",
-      "binsize = (xedges[1] - xedges[0])*(yedges[1] - yedges[0])\n",
+      "\n",
+      "# binsize = (xedges[1] - xedges[0])*(yedges[1] - yedges[0])\n",
+      "# also fixing histogram:\n",
+      "binsize = (X[1,0] - X[0,0]) * (Y[0,1] - Y[0,0])\n",
+      "\n",
       "norm = Z.sum()*binsize\n",
       "Z = Z/norm # normalize Z\n",
       "surf = ax1.plot_surface(X,Y,Z,cstride=1,rstride=1,color=\"white\",shade=False)\n",
@@ -204,7 +214,7 @@
        ]
       }
      ],
-     "prompt_number": 58
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -228,7 +238,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -240,7 +250,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -252,7 +262,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -269,9 +279,17 @@
       "plt.subplots_adjust(left=0, right=0.90, top=1, bottom=0, wspace=0.22)\n",
       "\n",
       "hist, xedges, yedges = np.histogram2d(x, y, bins)\n",
-      "X, Y = np.meshgrid(xedges[:-1], yedges[:-1])\n",
+      "# X, Y = np.meshgrid(xedges[:-1], yedges[:-1])\n",
+      "# fixing histogram:\n",
+      "xcenters = (xedges[:-1] + xedges[1:]) / 2\n",
+      "ycenters = (yedges[:-1] + yedges[1:]) / 2\n",
+      "X, Y = np.mgrid[xcenters[0]:xcenters[-1]:len(xcenters)*1j,ycenters[0]:ycenters[-1]:len(ycenters)*1j]\n",
+      "\n",
       "Z = hist\n",
-      "binsize = np.abs((xedges[1] - xedges[0])*(yedges[1] - yedges[0]))\n",
+      "# binsize = np.abs((xedges[1] - xedges[0])*(yedges[1] - yedges[0]))\n",
+      "binsize = (X[1,0] - X[0,0]) * (Y[0,1] - Y[0,0])\n",
+      "\n",
+      "\n",
       "norm = Z.sum()*binsize\n",
       "Z = Z/norm # normalize Z\n",
       "surf = ax1.plot_surface(X,Y,Z,cstride=1,rstride=1,color=\"white\",shade=False)\n",
@@ -361,7 +379,7 @@
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -385,7 +403,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 59
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -401,7 +419,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 60
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -418,9 +436,16 @@
       "plt.subplots_adjust(left=0, right=0.90, top=1, bottom=0, wspace=0.22)\n",
       "\n",
       "hist, xedges, yedges = np.histogram2d(x, y, bins)\n",
-      "X, Y = np.meshgrid(xedges[:-1], yedges[:-1])\n",
+      "# X, Y = np.meshgrid(xedges[:-1], yedges[:-1])\n",
+      "# fixing histogram:\n",
+      "xcenters = (xedges[:-1] + xedges[1:]) / 2\n",
+      "ycenters = (yedges[:-1] + yedges[1:]) / 2\n",
+      "X, Y = np.mgrid[xcenters[0]:xcenters[-1]:len(xcenters)*1j,ycenters[0]:ycenters[-1]:len(ycenters)*1j]\n",
+      "\n",
       "Z = hist\n",
-      "binsize = (xedges[1] - xedges[0])*(yedges[1] - yedges[0])\n",
+      "# binsize = (xedges[1] - xedges[0])*(yedges[1] - yedges[0])\n",
+      "binsize = (X[1,0] - X[0,0]) * (Y[0,1] - Y[0,0])\n",
+      "\n",
       "norm = Z.sum()*binsize\n",
       "Z = Z/norm # normalize Z\n",
       "surf = ax1.plot_surface(X,Y,Z,cstride=1,rstride=1,color=\"white\",shade=False)\n",
@@ -510,7 +535,7 @@
        ]
       }
      ],
-     "prompt_number": 61
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -524,13 +549,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 73,
+       "prompt_number": 14,
        "text": [
-        "1.0000000000000033"
+        "11.342184952368376"
        ]
       }
      ],
-     "prompt_number": 73
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
