after review #2 fixing figure

--- a/Additional figures for paper.ipynb
+++ b/Additional figures for paper.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:891053896ee6b5e2c399611b913cdfc9aa98e99106831988526199a0b9e922b4"
+  "signature": "sha256:9fd54f6ca1c229ec670f512081bb080e4acb2970044c9b6e9a4c0cacbbfaef07"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -329,7 +329,9 @@
      "metadata": {},
      "source": [
       "## Now with the scaled versions\n",
-      "# Note, this doesn't make sense because we divide by the ncount assuming it is the LO power ($\\beta$) but when the LO is weak, ncount is mostly (or entirely) noise!"
+      "# Note, this doesn't make sense because we divide by the ncount assuming it is the LO power ($\\beta$) but when the LO is weak, ncount is mostly (or entirely) noise!\n",
+      "\n",
+      "10-3-14: fix is to subtract out the ncount for no light! Also, we should correct everything by subtracting the no-light values. We already correct the CCD shot by subtracting the background so the noise that we get in the FFT is just electronic noise. Will be better cold. Should redo this cold!"
      ]
     },
     {
