cleaning up analysis, and updated versions

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -164,10 +164,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ffa70f7bb10>]"
+       "[<matplotlib.lines.Line2D at 0x7fb7e264c190>]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -175,7 +175,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXUAAAEACAYAAABMEua6AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJztnXv0XFWV5z+bPIAQSAKBJJBIeMtDHsqgNj6iAobHgI9R\nIE3LtLbtOD3I2D3ToqNDRseldi9sZ3UvbFEQxh4RREHAoAnKT0DlHULCw/BISALJLwkkkBAeCez5\n45yb3FSq6ldV9966t+r3/axVq+777rp17/fsu88+55i7I4QQoj/YqWwDhBBC5IdEXQgh+giJuhBC\n9BESdSGE6CMk6kII0UdI1IUQoo9oKupmtouZ3W1mD5rZIjObHZfPNrMVZjY/fmZ2xVohhBBNsaHy\n1M1sjLtvMrORwJ3AhcBMYIO7f7sLNgohhGiRIcMv7r4pTo4GRgFJKWBFGSWEEKIzhhR1M9vJzB4E\nBoG57n5PXHWBmS0ws8vNbHyhVgohhGiJIcMvWzc0GwdcD1wArIkfgK8BU9z9U4VYKIQQomVaFnUA\nM/sKsMndL0ktmw7c5O5vqdlWncoIIUQHuHvH4e2RzVaa2URgi7uvN7NdgZOBb5rZZHdfFTf7MLAw\nb8PKxsxmu/vssu3oFNlfLrK/PHrZdsjuEDcVdWAKcJWZjSDE369x9zlm9n/N7FhCpekS4DNZjBBC\nCJEPTUXd3RcCb62z/BOFWSSEEKJj1KK0MQNlG5CRgbINyMhA2QZkZKBsAzIyULYBGRgo24Ayaaui\ntK0Dm3kvx9SFEKIMsmqnPHUhhOgjJOpCCNFHSNSFEKKPkKgLIUQfIVEXQog+QqIuhBB9hERdCCH6\nCIm6EEL0ERJ1IYToIyTqQgjRR0jUhRCij5CoCyFEHyFRF0KIPkKiLoQQfYREXQgh+giJuhBC9BES\ndSGE6CMk6kII0UdI1IUQoo+QqAshRB8hURdCiD6iqaib2S5mdreZPWhmi8xsdly+p5nNM7PFZjbX\nzMZ3xVohhBBNMXdvvoHZGHffZGYjgTuBC4GPAmvd/R/M7AvABHe/qGY/d3crynAh+gUzFgGbgZXA\nLHfWl2ySKJGs2jlk+MXdN8XJ0cAowIEzgavi8quAD3VqgBDDGTMmAEcAxwKnAt8r1yLR6wwp6ma2\nk5k9CAwCc939HmCSuw/GTQaBSQXaKEQ/80FgTZx+FvhMibaIPmDkUBu4+xvAsWY2DrjezI6qWe9m\nVjeGk8TgIwPuPpDBViH6kTOAbwDvB04B5pmxBoVhhg1mNgOYkdvxhoqp15z8K8Am4NPADHdfZWZT\ngNvc/c012yqmLkQTzBhJeNM9xp0VZjwJHBhXX+vO2eVZJ8qi0Ji6mU1MMlvMbFfgZOBR4Ebg/LjZ\n+cANnRogxDDmncDT7qyI88/F73tRGEZ0yFDhlynAVWY2glAAXOPuc8zsLuBaM/sUsBT4eLFmCtGX\n/Hvg5tT838b5UxR6EZ3SVvilrQMr/CJEU8x4BDjfnXvj/GTgIXf2KdcyUSaFpzQKIbJhxk5mLDLj\ndjPmmDHejKuBg4D/ZUbSeG8NMCHG2oXoCHnqQhSMGScSGu4lXAu8FTg4mU8qRc0YBI51Z2V3rRRV\nQZ66ENXnXODlOJ1Ugk6omU9YBUzunmmi35CoC1EgMZTyMYKwvwrMBN4AdgZ+zo6VomrMJzKh2J0Q\nxfI+QtriL8x4HDgMmArc6c5H62wvT11kQqIuRLGcA/wkTt9I6DdpX+CmBtuvQp66yIDCL0IUhBk7\nEzq7uzYuugk4CzgN+GWD3QaRpy4yIFEXojiuB0YAl8W0xXuAvYBn3Xm6wT7y1EUmJOpCFMebgXHE\nLnXdeYPQFcAeSb56nX3kqYtMSNSFKI6d43c6bXENMJ3GfaerolRkQhWlQhTHOuBh4OOptMWX4nej\nTruU0igyoRalQhSAGaOAF4G93NmUWj6e4KF/pl6nXWbsRMhn382d17plr6gOalEqRDU5GFiRFnQA\nd9a7c3ajXhhj3H0NqFMv0RkSdSGK4UhC6KUTFFcXHSNRF6IYjgIWdbiv0hpFx0jUhSiGLJ660hpF\nx0jUhSiGo1D4RZSARF2InIndA0wH/tThIZTWKDpGoi5E/hwGLHXn1Q73l6cuOkaiLkT+HEnnlaQg\nT11kQKIuRP5kqSQFeeoiA2pRKkTOmLGU0B3A08CsRg2Nmuy/J7AS+COwqZNjiN4lq3ZK1IXIGTM2\nAbvG2a2DSrexvwGvA8nz0/YxRO9SaDcBZjbNzG4zs4fNbJGZfS4un21mK8xsfvzM7NQAIfqJ2OdL\nvd4ZW8YdB7ZkOYYYvjT11M1sMjDZ3R80s7HA/YSRXD4ObHD3bzfZV566GHaYcSgwF7ibBp12tXic\nZcBDwHkKvQwvsmpn06533X0VodIGd99oZo8C+yXn7vSkQvQxhwGP5hAueRH4kgRdtEvL2S9mNh04\nDrgrLrrAzBaY2eVmVm8EFyGGI4fReaOjNBuA3XM4jhhmtDRIRgy9XAdcGD327wJfjau/BlwCfKrO\nfrNTswPuPpDJWiGqz2HAAzkcR6I+TDCzGcCM3I43VPaLmY0CbgZucffv1Fk/HbjJ3d9Ss1wxdTHs\nMON24GJ3bst4nJ8BV7tzXT6WiV6h6OwXAy4HHkkLuplNSW32YWBhpwYI0We8GYVfRIkMFX45ETgP\neMjM5sdlXwLONbNjAQeWoJQrITBjArALoeFQViTqoiOGyn65k/re/C3FmCNET3MYsDjmmWdFoi46\nQn2/CJEfeWW+gERddIhEXYj8kKiL0pGoC5EfEnVROhJ1IfIjT1HfiERddIBEXYgcMOP7wOHAt8zI\no4W1PHXRERJ1IfLhKMLzdArwvRyOJ1EXHSFRFyIfXovfeXWVK1EXHSFRFyIf/iewDjglp54VJeqi\nIyTqQuSDA4ty7CpXoi46QqIuRD7sRhhPNC82ALvHoe2EaBmJuhD5MIYw2HQuuLMZ2My2sU6FaAmJ\nuhD5sBs5inpEIRjRNhJ1IfIh7/ALSNRFB0jUhciHXMMvkQ3A2JyPKfociboQ+SBPXVQCiboQ+aCY\nuqgEEnUh8qGo8ItEXbTFUMPZCVF5zPgRMJ0ggrNybADUDgq/iEogURf9wEnA5Dj9PeDsEmxQ+EVU\nAoVfRD+Q3Md5dabVCQq/iEogT130A0sJfa/k1ZlWJxQVftk752OKPkeeuugHJgCbShR0UPhFVAR5\n6qIfmAjsYcZo9639mncbhV9EJWjqqZvZNDO7zcweNrNFZva5uHxPM5tnZovNbK6Z5TF8lxBtY8ZI\nYA9gObB/iaYo+0VUgqHCL5uBz7v7kcA7gL8xs8OBi4B57n4o8Js4L0QZ7AmsBxYDB5doh8IvohI0\nFXV3X+XuD8bpjcCjwH7AmcBVcbOrgA8VaaQQTdgLWAs8SbmirvCLqAQtV5Sa2XTgOOBuYJK7D8ZV\ng8Ck3C0Twx4zLjPjdjPmmNEoxDeRIOpPAAd1z7ptxIEsxqDwi6gALVWUmtlY4GfAhe6+wWzbYCzu\n7mbmDfabnZodcPeBzk0Vw5CjgbfH6UaNihJRfxJ4f5fsqmUXYLM7r+d8XIn6MMDMZgAz8jrekKJu\nZqMIgv4jd78hLh40s8nuvsrMpgCr6+3r7rPzMlQMSxKRbNaoqHRPnWJCLyBRHxZEZ3cgmTezi7Mc\nb6jsFwMuBx5x9++kVt0InB+nzwduqN1XiBz4Vvw+t0kOeiLqTwEHmDGiK5ZtTxGZLwAbgTFmak8i\nWmeom+VE4DzgfWY2P35mAt8ETjazxYRX3m8WbKcYniT35x5NtpkIrHXnZYK4Ty3cqh0pIvMFd94A\nXia8CQjREk3DL+5+J42F/6T8zRFiO5JRf6YC8xtsMxFYGKeTEMzTBdtVSyGiHtlICMFsLOj4os/Q\na52oMkk8eVqTbZLwC5SX1lhE5kuC4uqiLSTqosqMJXTU1Sykkhb1sipLi/TUJeqiLSTqosqMJfTA\nOJSn/lyc/gDwySHy2otAoi4qg0RdVJndgcdo3VMfF+dPJeS1dwuFX0RlkKiLKjOW0DVFXU/djNEE\nL/mFuGhN/H6E7g6WIU9dVAaJuqgyWz312BS/lr2A52LqH8AsgqAPdLlv9SJF/RhgdgkhJdGjSNRF\nlRlL6FtoE0HAieK2xIw5hMGmk9ALUcj/A/DhLjdCKjL8MhY4hO6HlESPokEyRJXZnRB+WE4IwawF\njgWmEAR9V1KiDuDOo2YMAu8BbuuSnbsB6wo6dlJYlDn+qugh5KmLKjOW0OhmBdsqS5P48nzgh9SI\neuTHhFBMtygy/PJdQhcIZY6/KnoIeeqiyowl5ambMYGQt74a+EdCtks9Ub8GWGzGoQSxnVWwIBYZ\nfnkWmC9BF60iURdVJmken3jq7ySEIX5HCMNsoI6ou7PMjC2EEAw07rY3L4r01J8nDKwtREso/CKq\nTDr8Mg14F/D7+DmR7XPUa3klfncjFl2kqK8jDNknREtI1EUliSmMiagvJ3jqJwJ3EkbfOpYwtGIj\nUb8L+APdiUUXGX5Zhzx10QYSdVFVdgVec2cLwVM/EHgbcJc7G4E/EboFaCTqa4HLuxSLVvhFVAaJ\nuqgqSSUpBFF/E/CEOy/GZb8niF0jUX+B5v2w50nRLUp3M1P9l2gNibqoKlv7EHfnJUIY4s7U+t/H\n7+eozwuE7JhuUFj4JbaWXQ9qTSpaQ6IuqkoST094A3h/qrl8IupXNWhC/yLdE/UiPXVQZaloA4m6\nqCpJa9KE5cDhxOby7qwAHiZkxNRrQt9NT70boq64umgJibqoKrWe+sr4nU5RXFZnWUJXRD1m6RSZ\n/QKqLBVtIFEXVSVdUQqh2f+1bJ+iWG9ZQrc89V0IWTqvF3gOhV9Ey6hGXVSV7QZbjqK9XavQestS\ndEvUiw69gDx10Qby1EVVqfXU26Vbol506AXkqYs2kKiLqrKdp94B/eSpq6JUtMyQom5mV5jZoJkt\nTC2bbWYrzGx+/Mws1kwxDKmtKG2XbjU+6lb4RZ66aIlWPPUfArWi7cC33f24+PlV/qaJYU5tSmO7\nbAJGmzEqJ3sa0a3wizx10RJDirq730H9UV3qjRkpRF5k8tTdcbrTAEkVpaJSZImpX2BmC8zscjNT\nE2aRN1krSqE7cfVuxdQVfhEt0WlK43eBr8bprwGXAJ+q3cjMZqdmB9x9oMPzieFH1opS6I6oK/wi\nMmFmM4AZeR2vI1F399XJtJn9ALipwXazOzNLCHnqKVRR2sdEZ3cgmTezi7Mcr6Pwi5lNSc1+GFjY\naFshOqRXPPVuiPrLwE5m7FLweUQfMKSnbmZXA+8FJprZcuBiYIaZHUvIgllC8cOFieFH1pRG6I6o\nnwNMNONwChrg2h0321pZunKo7cXwZkhRd/dz6yy+ogBbhEjTK+GXyYRh9fan2AGuk8pSibpoilqU\niqqSV/il6AZISWpv0QNcq7JUtIQ69BKVw4wRwM5kzyp5Adg7u0VNeQx4Ejiz4PFQVVkqWkKeuqgi\nY4GXYgOiLHSj8dEE4G+7MMC1PHXREhJ1UUXyiKdDd2LqE2k8+HWeqFWpaAmJuqgiecTToWBRj6Me\n7Q2sKeocKdSqVLSERF1UkTzSGaF4T30M4O6F56mDwi+iRVRRKiqDGT8hpAjuQmhwk5WiRX1vuhN6\nAVWUihaRqItKEEMZH2Pb22Me+dhFi/pEuhN6AXnqokUUfhFVYQLb7scngT/kcMyi89S76al/Gnif\nGQNmqFdU0RCJuqgK+wLLgdeAn1O/D/922QiMiXnvRdCtSlKA8YSw1HuB5WbcbsYcCbyoRaIuqsIU\nYDGhW+e/IoeKUnfeIKRGFuWtdzP8kjTEeiB+vxs4ldA1gRBbkaiLqjCFEEf/Z4JXmkeeOhTbAKmb\n4ZdZwLXAB9hWkBTdNYHoQSTqoirsC6x050lgGTArp/BCkZWlXfPU3Vnvztmx5eo/EK7RKV1oySp6\nDIm6qApTgGfj9HLgIPIJLxQp6t301NPcBWyUoIt6SNRFVUjCL7At9JJHeKEvPPUaHgUO1KAZoh4S\ndVEV9mWbqCfx4zzCC0V76l0XdXdeBZ4ADu/2uUX1kaiLqrA1/FITP85KP4ZfAB4Cjinp3KLCSNRF\n6cTWpOnwS54U0gDJjJHxuHnk03fCQ8DRJZ1bVBiJuqgC44AtBXWM9T7gswU01NkLWOfO6zkesx0k\n6qIuEnVRBYry0iH0pDiNkEmzKkdxL6uSNGEBcEx8yxFiKxJ1UQXS6Yx5szx+v0QYIi+vVpilVJKm\nWEkYH3VSiTaICiJRF1UgnfmSN0kmTdJB2ALyaYXZrRGP6hKH+lNlqdgBibqoAoWFX5JMGuDjwHrg\ngpyyasr21BMbLlXHXiLNkKJuZleY2aCZLUwt29PM5pnZYjOba2a6oUQWigy/AEHcgfsJIZg8KNVT\nj4wGDkQde4kUrXjqPwRm1iy7CJjn7ocCv4nzQnRKkeGXNGsJYpwHVfDUk54s1bGX2MqQou7ud7Bj\nLu6ZwFVx+irgQznbJYYXRWa/pFlLEOM8qIKof5nwm9Sxl9hKpzH1Se4+GKcHUQ28yEbh4ZdInp56\nFcIvSwi58hJ0sZXMY5S6u5uZ11tnZrNTswPuPpD1fKIv6Wb4Ja/+Uqrgqa8hvzcPURJmNgOYkdfx\nOhX1QTOb7O6rzGwKsLreRu4+u2PLxLDAjN0J+dZ5DYrRjDWEEYPy4BBC5sk6YFZJ3vI6YHczRrmz\nuYTzixyIzu5AMm9mF2c5XqfhlxuB8+P0+cANWYwQw5opwLMx77pocgm/mLErYbzQd1Bi5kkcru95\nQpcFQgCtpTReTWi4cZiZLTezvwS+CZxsZouB98d5ITrhEmDvLuVa51VReiDwcpwuO/NEIRixHUOG\nX9z93AarTsrZFjE8OZjQoVfi8Z5d4Lnyqig9CPg9oTHTZ0quqFxDfpW/og9Qi1JRNolj0Q2Pdy0w\nMYdOsA4CHsuxz/cs5JmmKfqAzNkvQmTkIeA5YGbRAunOq2a8AuwOvJjhUAcBi/OxKjMKv4jtkKcu\nyuYA8uuPpRXyCMEcDDyZgy15kEnUzfiDGfeq/5j+QaIuSiOGQQ6lu15vHuGKg6iOqGctpI4Bjkf9\nx/QNEnVRJvsCG915oYvnzCSCcRi7aYTWnFWgY0/djD0Ig4hA+Vk8Iick6qJMuu2lQ3bP9k3AoDuv\n5mRPVrKEX46L3ytQ/zF9gypKRZn0oqhXKfQC2UT9eOAuYGcJev8gT12UyWF0X9Sz5nUfBDyRky15\nkKWQOh74KTA9N2tE6UjURZkcCvypy+fMWlFaNU89S+798cCvgdFmjMvXLFEWEnVRJr0YfqlSOiMx\ntr8J2ktHNGMCMBl4jFDpOz1340QpSNRFKZgxGtgfeKrLp+63mDp0FlJ6KzDfndeBpUjU+waJuiiL\nA4AVJWSRdCzqMcRxINUT9U5CSscD98XpJYT/Q/QBEnVRFmXE0yGbpz4Z2OSeqYuBIugkAyYt6kuR\np943SNRFWZSR+QKh//FxZozoYN9/BXauYJP6rKIuT72PkKiLsvgUcFq3BTLGkF8A9uxg94OBPahe\nk/q23j7MuJLQKvY78dovRZ563yBRF2UxhTAkXBkCmbWytGpN6tv11I8GRrDt2i8BpufQJbGoABJ1\nURY7x+8yBLJTUZ8DLKJ6TerbFfUk9HQv2wb5cGBC3oaJ7iNRF10njvFpwHWUI5BTge92EPoZB/xL\nxQQd2k9pnMeOhZNy1fsEiboogwOAZe58rCSBHA0cSfuhn32A1YVYlI12Uxr3B75ec+2XosrSvkCi\nLsqg7AY8m+J3u6GfScBg/uZkpt3wS72WvEuRp94XSNRFGZTdKdblwOO0H/qpqqf+ZWBaK+EkM3Yi\nZPE8XrNKaY19gkRdlEHZ/acsA+7rIPRTVVE/kPAstxJOmgqsd2dDzfJTgT+vYA6+aBOJuiiDssMv\nawgC3TJmjCGMP1ArhlUgCSctYuhwUqNO1HYjdApWtRx80SaZBskws6WEUdlfBza7+wl5GCX6noMp\nN/zSSQvMfYDV7ngB9mRlFvAo8NUW3j4aifrG+L2SauXgizbJOvKRAzPc/fk8jBH9Txzj802UO8bn\natoX9apWkuLOejN+SWutZBuJ+izgakLvjZvqrBc9Qh7hF7VCE+0wjTDG5ysl2rAW2LvNFpRVjacn\nLCdc26GoK+rurHfnVOBh4EM52ya6SFZRd+BWM7vPzD6dh0GiWMy42ozBEivEyq4k7XRgiX4R9cNo\n3jvmvwL/ZMaAKk17k6zhlxPdfaWZ7Q3MM7PH3P2OZKWZzU5tO+DuAxnPJ7LzFoJAJRViZ3f5/GVX\nkiYkIZh1LW5f2fBLZEhRN2NnYD+ah75uAP4N2DfOl3GPDCvMbAYwI6/jZRJ1d18Zv9eY2fXACcAd\nqfWzM1kniiAJOTxMTYWYGZcBxxLCE7MKau1Zdo56QpIB02r3v/sATxdnTmZa8dQPJLTk3dxoA3de\nM+NZQqvTqnVc1pdEZ3cgmTezi7Mcr+Pwi5mNMbPd4/RuwCnAwizGiK5wa/y+rI5oHwX8O4pNays9\n/BJpNwOmF8IvU4eoJ2h1TNj/DKyneh2XiRbIElOfBNxhZg8CdwM3u/vcfMwSBbIPcA+h75NaRsfv\nhRTnoVUt/NIqlQ6/uPMS8DLNO/b6InBMC7HyX8djTc7RRNElOhZ1d1/i7sfGz1Hu/o08DROFMQ24\nHnhbnXW/jd+zi/DQohdZFVFvtwFS1T11GDoEM43QorTpm1gcSOSnwMdztU50BbUoHX5MA24CjogV\nZ2neQmh8Mqmgc18LjAKurkBWRbvhl0n0vqgndWitxMqvRRWkPYlEvQ5mXNaPKV1xXM4phIrKxwki\nnqwzwriVPyNUqOV97lHABwmiXoWm6C2HX+J1m0CoQK4yQ4n6WmAurcXK/wjsYVY3TCcqjES9PscB\n76Ua4pMnk4HnY572/WwfgnkTsAW4k2J66/sKbG1wVIWsinbCL3sROsHaUqA9edBQ1GOhPQ04p5XQ\nmjtvENI9f9lvzk2/I1Gvz6j4vYDyxSdPphEefAgjyR+fWpeMLv8kOXvqZtwAXETon+QGqpFV0U74\npRdCL9DcU09EuZ3rvoWQ2thvzk1fI1Gvzy3x+8oKiE+etCLqS0iJuhk/MOPejN7a8YSC8j3AaxW5\npu2I+j5UOPMlRTNR3x94us0OyVbF7yKzoUTOSNTrsx8h9vj+sg3JmbSoPwQcZcbtZswB3kEQ9ecB\nM9s6CPGfEUQ5i7eWpEpWIeySsIbW+3/phcwXaEHU2zzeLMKb23UVKYhFC0jU63MwcCkww4xdyjYm\nR7aKeuxQ6yXg3QTBPpEwcIQDT7HNW98tfr8MXNjheV8EfkU1wi5A2/2/9Er4ZQWwb6zYraVtUY//\n1WeB03KwTXQJiXp9DiY0qFpIqDDtScx4uxlLU974gWzz1AEeiN8rCT0nJiGGdAjmReA3BFG+td2s\noNjV7lTgw1UR9BSthmB6IvwSC6p11E9J7cRTh9B8/VAzpmYwTXQRiXoNZuwBjCE8xL8ETi/XovaJ\nKZlPArcTMl4Sb/xdbC/qHwHmAOOAXVJi/RRwgBnjCJkwpwGfJDQzbzcrqApd7TZiNa1lwHwE+ESP\nZIE0CsF0JOqxn5ibUXe8PYNEfUcOAp6MYYg5wOlt9rvdFcy4xowFZvyqjtB8gOBpjwZei8vujdNb\nRT32oX064Y1kItvEOvHU30kIySSVm2tTx2o1Nl6Vvl7q0aqnPplQoPVCFshewBV1CqBOPXUInv/X\ne6RQG/ZI1HckPdTaAsINfVeVbuhYyJwGHE1o0LMysS9618mr8r3ARwmx49MJD/zKOod8PrX9Z9gW\nU38XIW894XuEDqHaiY2XPXRdM4YU9VhhnNQrVKmitxEGHMGOBVAWUd8V2CMe88osxoniydqfej+y\nVYTccTM2ELoUhur0LX1yanojMJZtD/EjhFahIwgC9AIhzPB2YFWDBjSz4r6fiUOjPUUIu4wGvpna\n7g/A+9qMjVelq916tBJ++SChZ8sXidencKuysZqabnPjoNl70Hm9QHr80pPMuJdQIBbVPbPIQCme\nuhk3mfG7Knm/KWrDBUmubpW8tC8C/43QP8cf47LNwHXABcBX3Dk7hlecEBP9LNvH07cStzs79YA+\nTWhhenzq+ADzgePM2rpvej38cjrwi5rrU2U+Smg0dHrK3jcBy2Mr0U6YRbjXjgCWkT3FVRRI10Xd\njL8CziA0RKnijVHrWX6E8JCcUYWH2ox3ErzoK9w5m9CT3rWEisxrCHHzf64pLG8mXOu6ol5LrNRc\nAzzhzgup5WsJLRLbaXHas+GXmBo4k1C30hO4sxxYRLiPE7KEXmoL/aVx8SuEVsKiYnRV1M04Ffjf\nhHxaKMH7NeP7Q6TlbSdC7iwheKhHxv0vM2NRiW8ZVxOE+xdmjE89cP9G6KRrCjsWlgOEuHpLoh4Z\nQWicU/s77yeMOD8k0aM/kOp66ucCZzT5L08AVrqzrMt2ZeVOQn1Iwv5sE+OsJF7748BCM26r4Nv2\nsKZQUU8/LGb8BPgFoRLurwlxuoYVbmb81oz1DbI7OrVnP+A8tqXlPZM+fow9TgSeqdn114SRnSCk\nBx5JCW8ZZryLkIlxSIPzJ+K5XWEZ85dXA2e1URi9QhinsvY8D9CiqBMKmBfct8Zkq8bu8dPovzyd\nkNbaa/ye0JgsIZOnniZxIgiV67sRxtZ8pB97Ne1Z3L2QD+DgDn5NmPdn4ryDXwP+LPgh9ff1qeCv\npbfPbo/vDv4g+GPxmC+ljr8cfAD8dvA/1dn33eD3g+8K/nLcZyP4+KKuXx0bRoDPjx8Hv6f2/ODj\n47XdwS7wO9q5nuBz6p0H/DTweXH6x+DPg/8q2Qb8MvDfxf1PB7+zW9eog2ua/MZXwf+iZt1l4BvA\n/9jN/zmn3zUNfDW4xfn/B/6Jgq7do3k/q8P9E2Q5w/5FGgY+GIVmQuqPvycu+wH4hfEGuQz87nij\njAe/BXxxSnzvjqI7p5MHDPz74M+BLwPfPwrf3Hj8J2tuymfq7D8KfD34JeA3gl8L/jD4GfldL/9B\nSgzrifLl48RHAAAJd0lEQVRfR2FuKNxDHL+uSDfZvu55wCfHa2nga2ofZvDHU8vuAb+y2w9FG9ck\n+Y3vjoX1UvBbwY8CX9nLQgX+NPihcXoVwRno6PkZ6v4AvytepwW9VgBW8VN1UV8Hvg/438UbYKtI\ngH8E/Ndx+k+pB2hj9JDmgV8PfjTBk0p7+VeCP0TKQ2xy840keC214pO+Ke9InfvSBsdZAv5GLFzG\nR/sfIHpDcZtJsbC4vdUHKBYY/6n2N9Zsc2UseO7s9KHptDBocKxnwT/NtredV8D3At8z9TtWgH8b\n/MtlPyQt/qa7U9f/jdRva6kQrNqH8Bb1SfC/b3Zv5XSu8bHQWBsFfjA+0w+B/yE+J7f04nUs57/D\nM+1fpGHg3wX/BvhT4CfU3Ah7RPF+T+qmW0jwpmsF+LY4/yohVPJGapv1BK9+HcFLvDVVcIwE/0lK\n1Os+oPGmvDke67F6ghxtSxcsiae6AXwT+Ivgm+N8wwco7vcbgre7LorHOkIYw8FfB1/EtreWveOx\nK+M1xmv1Kvg58VrcAX4e+HcIbxw3xd93H/i5Zdvb4m9K3mTS/9+yXhWi+J9siff07UUXUPG+Tr/d\nJJ+XU9Ovxnv7F/HeGCT1ht7COS4nwxt7PMZlQx2D8Gbf8K25+P8Oz7R/kYaBHxRvrBcbCOUzUcQW\nELzy8dQJE8TlP2V7wXeCJ7C8wY30Qjz3OoLQXz/UHxT/7Ebecj277qxz7mfj9xbwRwgFyiNxv7nR\nni2p7Z+rEZF04TFIKDAq5TVGO55jW8FzMiF0sQZ877jNf40231/Ww9Hmb0reZOZW6Vpn+D1/TN1H\nPyent7Qhzpk8I+tT1zC5nunCMn3/J59bwL9OeFt+Od73q+J+q+LznHbmrkmdd6f4GxcQHKa9wd9H\neHtYRnCYlsT7M32Ml6Kty+Jz+zzBMat9nre+eRMKhbsIhdK98dm+La7bieDUtF3wgF9BKIjnVFrU\no7Fp0a0Vykdq19EkTJC6ae5nx0IguZHuI3gDtTdNx5WDjexqcBPvH7d7oo4Nr9XMp2/6pK4hOeZT\nbO+hV8ZrJHgxtW8tg/E3Jzf/SOq8dVX90+z+66VPs3u5C9cueQbGU7+wTKaT5+aV+GwsIYRqap+b\n5JO8CWwmiP7q+Jy8SnAO09uuY0cn0AkFROL41a57vmb+6ZpnsFbwN9U5RrrQ2BJ/2+p43pWEQiqx\nPym4XtjefjzT/9D5H8hM4DFCvuoX6qz3oW6udm+8eg9cgxupnth2XDnYzk1c57fV81rShdJ250zP\nt3t9yhQMaoS+k/9Xn1z/o0oVTjX3de1zk37jTd5019d839Ng+7To1s7XHit9jNqCpdHzmdzDL9Wc\nJ719vXNuqNk+KWiGKrDuKUXUCQ1TngCmE4YpexA4vGYbH+rmKurGaya2bfzGGXnb0O7vzXJ9strf\nrl0NhL6S9nfjI/vbOdd2987+Nc9NM4epnhDPhdsaHWsoZ7CZ09jMIUu/hbRSaDQrsMaXJervBH6V\nmr8IuKhmm0yGlf0BZpdtQy/Zn3cBres/fOzP4uzU7hvmP72oQEexJed0iEKjYWETr71nsbXTXhr3\nY/sm5ysIvQCKYYqHlsFV6MFS9Bjt3jt1tj87vc7s+9e5X5ZrP03NbKy3rmZZPVvrrcuFTrsJ8Fyt\nEEIIkQuxGXGbO5m9g/B6NjPOfxF4w92/ldpGwi+EEB3g7h2PttapqI8E/kQYNu1Z4B7gXHd/tFND\nhBBCZKejmLq7bzGz/0LovXAEcLkEXQghyqcjT10IIUQ1KaQ/dTObaWaPmdnjZvaFIs6RJ2Y2zcxu\nM7OHzWyRmX0uLt/TzOaZ2WIzm2tmle0r2sxGmNl8M7spzveS7ePN7Doze9TMHjGzt/eY/Z+P981C\nM/uxme1cZfvN7AozGzSzhallDe01sy/GZ/kxMzul/lG7RwP7/zHePwvM7OdmNi61rvL2p9b9nZm9\nYWZ7ppa1ZX/uom5mI4B/IbQ4PQI418wOz/s8ObMZ+Ly7Hwm8A/ibaPNFwDx3PxT4DdUevutCwqDT\nyatXL9n+f4A57n44cDShpXJP2G9m+xHGhX2bu7+FEI48h2rb/0PC85mmrr1mdgQh7e6IuM+lZlbK\n2MYp6tk/FzjS3Y8BFhPG8e0l+zGzaYRB5Z9OLWvb/iJ+3AnAE+6+1N03Az8BzirgPLnh7qvc/cE4\nvRF4lJCLfyZwVdzsKuBD5VjYHDObCpwG/ABIas17xfZxwLvd/QoI9TXu/gI9Yn9kJDAmJhCMISQP\nVNZ+d78DWFezuJG9ZwFXu/tmd19KaEl+QjfsbEQ9+919nrsnA2vfDUyN0z1hf+TbwN/XLGvb/iJE\nvV7DpP0KOE8hmNl04DjCjTHJ3QfjqkFgUklmDcU/Af8dthstvldsPwBYY2Y/NLMHzOz7ZrYbPWK/\nuz8DXAIsI4j5enefR4/Yn6KRvfuybUxh6I3n+ZNsGyy8J+w3s7OAFe7+UM2qtu0vQtR7tubVzMYC\nPwMudPcN6XUe2/6WYlgTzOwMYLW7z2ebl74dVbU9MpIw5uml7v5W4CVqQhVVtt/MJhC83OmEB3Cs\nmZ2X3qbK9tejBXsr+1vM7H8Ar7n7j5tsVin7zWwM8CXg4vTiJrs0tb8IUX8GmJaan8b2JU0lMbNR\nBEH/kbvfEBcPmtnkuH4KYfDmqvFnwJlmtgS4Gni/mf2I3rAdwr2xwt3vjfPXEUR+VY/YfxKwxN2f\nc/ctwM8JfSP1iv0Jje6X2ud5KjsOzF4JzOw/EsKQf55a3Av2H0RwChbE53gqcL+ZTaID+4sQ9fuA\nQ8xsupmNJgT5byzgPLlhZgZcDjzi7t9JrboROD9Onw/cULtv2bj7l9x9mrsfQKig+627/wU9YDuE\n+gxguZkdGhedBDwM3EQP2E+o1HqHme0a76OTCBXWvWJ/QqP75UbgHDMbbWYHAIcQGhtWCjObSQhB\nnuXur6RWVd5+d1/o7pPc/YD4HK8A3hrDYe3bn2dPZqlexk4ltDh9AvhiEefI2d53EeLRDwLz42cm\nsCdwK6E2fS5Qib6pm/yO9wI3xumesR04BrgXWEDwdMf1mP2zCZXrCwmVjKOqbD/hje5Z4DVC/ddf\nNrOXEBp4gpCV9MEK2v9JwrgOT6ee30tT21fV/leT61+z/ilgz07tV+MjIYToI8rO1xRCCJEjEnUh\nhOgjJOpCCNFHSNSFEKKPkKgLIUQfIVEXQog+QqIuhBB9hERdCCH6iP8PPc54tZXHRDAAAAAASUVO\nRK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7ffa70bfcf50>"
+       "<matplotlib.figure.Figure at 0x7fb7e3c3a7d0>"
       ]
      },
      "metadata": {},
