created new analysis notebook that is compatible with the interspersed vacuum rounds

--- a/CCDimage.ipynb
+++ b/CCDimage.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +251,7 @@
     "    \n",
     "    \n",
     "    filename = datetime.datetime.now().strftime(\"%H-%M-%S\") + \"_raw\"  # based on time and date\n",
-    "    np.savez(filename, dataOut=dataOut, ncount=ncount)\n",
+    "    np.savez(filename, VacCorrected=VacCorrected, ncount=ncount)\n",
     "    \n",
     "    print filename"
    ]
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -664,17 +664,8 @@
       "data round: 4\n",
       "vacuum round: 5\n",
       "data round: 5\n",
-      "vacuum round: 6\n",
-      "data round: 6\n",
-      "vacuum round: 7\n",
-      "data round: 7\n",
-      "vacuum round: 8\n",
-      "data round: 8\n",
-      "vacuum round: 9\n",
-      "data round: 9\n",
-      "vacuum round: 10\n",
-      "data round: 10\n",
-      "Finished data\n"
+      "Finished data\n",
+      "11-57-58_raw\n"
      ]
     }
    ],
@@ -682,7 +673,7 @@
     "#Interspersed vacuum and data runs:\n",
     "\n",
     "frames = 50  # frames to collect (this is sent to the ZMQ server)\n",
-    "rounds = 10  # rounds of data (total shots is N*M)\n",
+    "rounds = 5  # rounds of data (total shots is N*M)\n",
     "\n",
     "dataOut = np.empty([600,frames,rounds],dtype=complex)\n",
     "vacOut = np.empty([600,frames,rounds],dtype=complex)\n",
@@ -734,9 +725,7 @@
     "#saveRaw()\n",
     "\n",
     "print \"Finished data\"\n",
-    "#saveRaw()\n",
-    "\n",
-    "#TODO: add data saving functions!"
+    "saveRaw()\n"
    ]
   },
   {
